# SymbolicRegressionGPU

./: .gitignore  CMakeLists.txt  experi_benchmark.cu  readme.md  run_cusr.cu
include/: cusr.h
src/: fit_eval.cu  fit_eval.cuh  prefix.cu  prefix.cuh  program.cu  program.cuh  regression.cu  regression.cuh
